--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@vapi-ai/web": "^2.3.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "import-in-the-middle": "^1.14.2",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.525.0",
     "next": "15.4.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.60.0",
+    "require-in-the-middle": "^7.5.2",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.0.5"
   },
